Reworks hashmap again to now only go off player responses based on an object based response which contains a players name and unicode response. Updated CurrentWeekOfEntity to remove OffsetDateTime object field as it is no longer required due to reversing the search when searching for the message to retrieve the id and jumplink to. Added in faster embed message updates to the DND Session Attendance Embed and essentially removes the entire description before appending the new one based on what is currently in the hash map of responses. Taking away processing time  for filtering out players names and such when deleting a players response. Updates OSUToken Classes that require authentication to now use the AES authenticated information. Updated build.gradle file to use spring dependency injection instead of using manual versioning.